# EventManger

./: CMakeLists.txt  Model.cpp  Model.hpp  README.md  View.cpp  View.hpp  main.cpp
Time/: Time.cpp  Time.hpp
Timetable/: Timetable.cpp  Timetable.hpp
